--- a/src/core/presentation/styles/index.css
+++ b/src/core/presentation/styles/index.css
@@ -2,6 +2,52 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Roboto";
+  src: url("/fonts/Roboto-Thin.ttf") format("truetype");
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url("/fonts/Roboto-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url("/fonts/Roboto-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url("/fonts/Roboto-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url("/fonts/Roboto-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url("/fonts/Roboto-Black.ttf") format("truetype");
+  font-weight: 900;
+  font-style: normal;
+}
+
+* {
+  font-family: "Roboto", sans-serif;
+}
+
 html {
   @apply h-full;
 }
@@ -21,13 +67,13 @@ h2 {
   @apply font-semibold text-3xl mb-5;
 }
 h3 {
-  @apply font-semibold text-2xl  mb-4;
+  @apply font-semibold text-2xl mb-4;
 }
 h4 {
-  @apply font-semibold text-xl  mb-4;
+  @apply font-semibold text-xl mb-4;
 }
 h5 {
-  @apply font-semibold text-lg  mb-3;
+  @apply font-semibold text-lg mb-3;
 }
 h6 {
   @apply font-semibold text-base mb-2;
